# ur_moveit2-pick-and-place

./: CMakeLists.txt  README.md  package.xml
action/: PickAndPlace.action  Place.action
include/ur_pick_and_place/: goal_receiver_node.hpp  gripper_controller_node.hpp  pick_executor_node.hpp  pick_place_manager_node.hpp  place_executor_node.hpp  ready_executor_node.hpp
launch/: modular_pick_and_place.launch.py  ur_pick_and_place.launch.py  ur_pick_and_place_action.launch.py
scripts/: real_robot_demo.py  test_modular_system.py
src/: goal_receiver_main.cpp  goal_receiver_node.cpp  gripper_controller_main.cpp  gripper_controller_node.cpp  pick_executor_main.cpp  pick_executor_node.cpp  pick_place_manager_main.cpp  pick_place_manager_node.cpp  place_executor_main.cpp  place_executor_node.cpp  ready_executor_node.cpp  ur_pick_and_place_moveit.cpp
srv/: GripperControl.srv
